--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -46,24 +46,10 @@
             <div class="hint">Paste full PokerNow URL or just the game ID</div>
           </div>
 
-          <div class="field field-checkbox">
-            <label class="checkbox-label">
-              <input type="checkbox" id="privateModeCheckbox" />
-              <span>Private Mode</span>
-            </label>
-            <div class="hint">Requires password to authenticate with hub</div>
-          </div>
-
           <div class="field" id="passwordField">
             <label for="dashboardPasswordInput">Dashboard Password</label>
             <input id="dashboardPasswordInput" type="password" spellcheck="false" placeholder="Enter password" autocomplete="off" />
-            <div class="hint">Used to authenticate with dom_auth service</div>
-          </div>
-
-          <div class="field" id="tokenField">
-            <label for="tokenInput">Token <span class="optional">(optional, manual override)</span></label>
-            <input id="tokenInput" type="password" spellcheck="false" placeholder="JWT token (auto-managed in Private Mode)" autocomplete="off" />
-            <div class="hint">Auto-fetched in Private Mode; manual entry otherwise</div>
+            <div class="hint">Required. Used to fetch a short-lived JWT from dom-auth.</div>
           </div>
 
           <div class="actions">
@@ -144,7 +130,7 @@
       </section>
 
       <footer class="footer">
-        <span class="muted">Tip: open with query params <code>?hub=...&amp;gameId=...</code> to auto-connect. Enable Private Mode for password-protected hubs.</span>
+        <span class="muted">Tip: open with query params <code>?hub=...&amp;gameId=...</code> to prefill. Password is never stored or put in the URL.</span>
       </footer>
     </div>
 
